# docs/swagger.yaml
@@ -94,6 +94,12 @@ definitions:
         type: string
       created_at:
         type: string
+      participant:
+        $ref: '#/definitions/github_com_novriyantoAli_moodly_internal_application_consultation_dto.UserDetailResponse'
+      participant_id:
+        type: integer
+      psychologist:
+        $ref: '#/definitions/github_com_novriyantoAli_moodly_internal_application_consultation_dto.UserDetailResponse'
       psychologist_id:
         type: integer
       started_at:
@@ -134,6 +140,8 @@ definitions:
         type: string
       message_type:
         $ref: '#/definitions/github_com_novriyantoAli_moodly_internal_application_consultation_entity.MessageType'
+      sender:
+        $ref: '#/definitions/github_com_novriyantoAli_moodly_internal_application_consultation_dto.UserDetailResponse'
       sender_id:
         type: integer
     type: object
@@ -152,6 +160,15 @@ definitions:
     required:
     - message
     - message_type
+    type: object
+  github_com_novriyantoAli_moodly_internal_application_consultation_dto.UserDetailResponse:
+    properties:
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
     type: object
   github_com_novriyantoAli_moodly_internal_application_consultation_entity.ConsultationStatus:
     enum:
@@ -2259,23 +2276,14 @@ paths:
     delete:
       consumes:
       - application/json
-      - application/json
-      description: |-
-        Delete a user by ID
-        Delete a user by ID
+      description: Delete a user by ID
       parameters:
       - description: User ID
         in: path
         name: id
         required: true
         type: integer
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
       produces:
-      - application/json
       - application/json
       responses:
         "200":
@@ -2300,7 +2308,6 @@ paths:
             type: object
       summary: Delete a user
       tags:
-      - users
       - users
     get:
       consumes:
@@ -2378,6 +2385,79 @@ paths:
             additionalProperties: true
             type: object
       summary: Update a user
+      tags:
+      - users
+  /users/psikolog:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of users with "psikolog" role, with optional filtering
+        and pagination
+      parameters:
+      - description: Filter by name
+        in: query
+        name: name
+        type: string
+      - description: Filter by email
+        in: query
+        name: email
+        type: string
+      - default: 1
+        description: Page number
+        in: query
+        name: page
+        type: integer
+      - default: 10
+        description: Number of items per page
+        in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of psikolog users
+          schema:
+            $ref: '#/definitions/github_com_novriyantoAli_moodly_internal_application_user_dto.UserListResponse'
+        "400":
+          description: Invalid query parameters
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get all psikolog users
+      tags:
+      - users
+  /users/user:
+    get:
+      consumes:
+      - application/json
+      description: Get currently active user details based on JWT token
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User details
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: User not found
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get active user info
       tags:
       - users
 securityDefinitions:
